# h3-routing-platform

./: .dockerignore  .gitignore  .gitmodules  LICENSE  Makefile  README.md  check_edges.py  debug_route.py  docker-compose.yml  environment.yml  investigate_shortcuts.py  python_api_geojson.json  route_debug.json  route_geojson.json  route_result.json  start_all.sh  start_daemon.sh  start_daemon_csr.sh  stop_all.sh  stop_all_csr.sh
.github/workflows/: ci.yml  cpp-build.yml  likec4.yml  python-lint.yml
architecture/: likec4.config.jsonc  model.c4
docs/: _config.yml  algorithms.md  alternative_path_approach.md  api_reference.md  architecture_overview.md  cpp_engine_deep_dive.md  data_processing.md  index.md  interactive_diagrams.md  roadmap.md  scientific_report.md  sdk_manual.md  tools.md
docs/diagrams/: 404.html  index.html  likec4-views.js
docs/diagrams/assets/: d2-B2fV8Tub.js  d2-B6_U_sdt.js  d2-BAWPlHfe.js  d2-BwRC045c.js  d2-DP0ZuQMZ.js  d2-IJOPBCeB.js  d2-QYwHaMKx.js  d2-gaoX7guF.js  d2-n0WGGe-N.js  dot-7ryKqRgW.js  dot-BHZyOBss.js  dot-BncHnlzz.js  dot-Bqa3gjE6.js  dot-CPDXRm8T.js  dot-CwYyjKnd.js  dot-D-iWwcEP.js  dot-D5eTE0Xe.js  dot-L6IHSuor.js  dot-Uxe4ypI6.js  dot-eqZXt-DL.js  e-CGSiUNOc.js  i-DteHIM3e.js  icons-B4OOHJt_.js  index-BSYwBlmo.js  index-C2le2sgX.js  index-CLYK49oc.js  index-CjnSfcUH.js  index-CuCNbXNY.js  index-DvvskGEg.js  likec4-B-xmVe-E.js  main-C8gJQoBn.js  main-CbEy9Bwy.js  main-DcSukQWt.js  main-DfoGIUsZ.js  main-dBQFNH6U.js  main-eeJD9ar_.js  mmd-B6xhuUKu.js  mmd-BbbI4DCr.js  mmd-BfJ0aVMZ.js  mmd-BxO0jPD3.js  (+19 more)
docs/tools/: duckosm.md  h3-toolkit.md  osm-importer.md  shortcut-generator.md
notebooks/: test_db.dbcnb
scripts/: add_visualization_metadata.py  create_city_config.py  install_duckdb_headers.sh  prepare_data.sh  setup.sh
sdk/cpp/: routing_client.hpp
sdk/python/: client.py  setup.py
sdk/python/h3_routing_client/: __init__.py  client.py
sdk/python/h3_routing_platform_client.egg-info/: PKG-INFO  SOURCES.txt
services/api-gateway/: Dockerfile  README.md
services/api-gateway/api/: ch_query.py  data_loader.py  server.py
services/api-gateway/app/: streamlit_app.py
services/api-gateway/config/: datasets.yaml
services/api-gateway/docs/: SDK_MANUAL.md
services/engine-cpp/: Dockerfile  README.md
services/engine-cpp/cpp/: CMakeLists.txt  DATA_STRUCTURE_DESIGN.md
services/engine-cpp/cpp/include/: csr_graph.hpp  h3_utils.hpp  shortcut_graph.hpp
services/engine-cpp/cpp/src/: benchmark_memory.cpp  csr_graph.cpp  h3_utils.cpp  main_csr.cpp  query_unidirectional_impl.cpp  server.cpp  server_csr.cpp  shortcut_graph.cpp  test_routing.cpp
tools/: export_edges.py
tools/duckOSM/: README.md  debug_vis.py  main.py  requirements.txt  setup.py
tools/h3-toolkit/: README.md
tools/osm-importer/: .gitignore  README.md  main.py  requirements.txt
tools/shortcut-generator/: README.md  main.py
(+130 files in other folders)
